--- a/style.css
+++ b/style.css
@@ -455,3 +455,16 @@ body  {
      border-top-left-radius:0 ;
     border-bottom-left-radius:0 ;
 }
+
+footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+footer col {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
