--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body {
     position: relative;
 }
 
+.container {
+    max-width: 1350px;
+    width: 100%;
+    margin: 0 auto;
+}
+
 #active-close {
     position:fixed;
     top: 0;
@@ -124,7 +130,7 @@ body  {
     overflow: hidden;
 }
 
-#navbar li a:hover,
+
 #navbar li a.active {
     color: #0ab3a2;
 }
@@ -568,10 +574,127 @@ footer .copyright {
     width: 100%;
     text-align: center;
 }
+
+
 .hiddenOverflow {
     overflow: scroll;
-   }
+}
+
+#page-header {
+    background-image: url(img/banner/b1.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 14px;
+}
+
+#page-header h2,
+#page-header p {
+    color: white;
+}
+
+#pagination {
+    text-align: center;
+}
+
+#pagination a {
+    text-decoration: none;
+    background-color: #088178;
+    padding: 15px 20px;
+    border-radius:4px;
+    color: #fff;
+    font-weight: 600;
+}
+
+#pagination i {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+#prodetails {
+    display: flex;
+    margin-top: 15px;
+}
+
+#prodetails .single-pro-details {
+    width: 50%;
+    padding-top:20px;
+}
+
+#prodetails .single-pro-details  h4 {
+    padding: 40px 0 20px 0;
+}
+
+
+#prodetails .single-pro-details  h2 {
+    font-size: 26px;
+}
+
+#prodetails .single-pro-details select {
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+}
+
+#prodetails .single-pro-details input {
+    width: 50px;
+    height: 47px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#prodetails .single-pro-details input:focus {
+    outline: none;
+}
+
+#prodetails .single-pro-details h6 {
+    font-size: 18px;
+    font-weight: 600
+}
+
+#prodetails .single-pro-details button {
+    background: #088178;
+    color: #fff;
+}
+
+#prodetails .single-pro-details span {
+    line-height: 25px;
+    font-size: 20px;
+}
+
  
+#prodetails .single-pro-image {
+    width: 40%;
+    margin-right: 50px;
+}
+
+.small-img-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3px;
+}
+
+.small-img-col {
+    flex-basis: 24%;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 799px) {
     .section-p1 {
@@ -597,8 +720,6 @@ footer .copyright {
     #navbar.active {
         right: 0px;
     }
-
-
 
     #navbar li {
         margin-bottom: 25px;
