--- a/style.css
+++ b/style.css
@@ -782,6 +782,10 @@ footer .copyright {
     justify-content: center;
 }
 
+#product1 .pro-container {
+    padding: 0  50px;
+}
+
 #product1 .pro {
     margin: 15px;
 }
@@ -810,6 +814,9 @@ footer .copyright {
 .back-drop-hide {
     display: none;
 }
+
+
+
 
 @media (max-width: 477px) {
     #section-p1  {
@@ -880,4 +887,29 @@ h2 {
 footer .copyright {
     text-align: start;
 }
+
+#prodetails {
+    display: flex;
+    flex-direction: column;
+}
+
+#prodetails .single-pro-image {
+    width: 100%;
+    margin-right: 0;
+}
+
+#prodetails .single-pro-details {
+    width: 100%;
+}
+
+#prodetails .single-pro-details span {
+    flex-wrap: wrap;
+    font-size: 18px;
+}
+
+#prodetails .single-pro-details h4 {
+    font-size: 28px;
+}
+
+
 }
