--- a/style.css
+++ b/style.css
@@ -580,6 +580,9 @@ footer .copyright {
     overflow: scroll;
 }
 
+/* Shop page  */
+
+
 #page-header {
     background-image: url(img/banner/b1.jpg);
     width: 100%;
@@ -685,12 +688,76 @@ footer .copyright {
     border-radius: 4px;
 }
 
+/* Blog Page  */
 
+#page-header.blog-header {
+    background-image: url(img/banner/b19.jpg);
+}
 
+#blog {
+    padding: 150px 150px 0 150px;
+}
 
+#blog .blog-box {
+    display: flex;
+    position: relative;
+    align-items: center;
+    width: 100%;
+    padding-bottom: 90px;
+}
 
+#blog .blog-img {
+    width: 50%;
+    margin-right: 40px;
+}
 
+#blog img {
+    width: 100%;
+    height: 400px;
+    background-size: covers;
+    object-fit: cover;
+}
 
+#blog .blog-details {
+    width: 50%;
+}
+
+#blog .blog-details a{
+    text-decoration: none;
+    font-size: 11px;
+    color: #000;
+    position: relative;
+    font-weight: 700;
+    transition: 0.3s;
+}
+
+#blog .blog-details a::after {
+    content: '';
+    width: 50px;
+    background-color: black;
+    position: absolute;
+    top: 4px;
+    height: 1px;
+    right: -60px;
+}
+
+#blog .blog-details a:hover {
+    color: #088178;
+}
+
+#blog .blog-details a:hover::after {
+    background-color: #088178;
+}
+
+#blog .blog-box h1 {
+    position: absolute;
+    z-index: -999;
+    top: -40px;
+    left: 0;
+    font-size: 70px;
+    font-weight: 700;
+    color: #c9cbce;
+}
 
 
 
@@ -782,10 +849,6 @@ footer .copyright {
     justify-content: center;
 }
 
-#product1 .pro-container {
-    padding: 0  50px;
-}
-
 #product1 .pro {
     margin: 15px;
 }
@@ -811,12 +874,10 @@ footer .copyright {
     width: 70%;
 }
 }
+
 .back-drop-hide {
     display: none;
 }
-
-
-
 
 @media (max-width: 477px) {
     #section-p1  {
