--- a/style.css
+++ b/style.css
@@ -972,5 +972,36 @@ footer .copyright {
     font-size: 28px;
 }
 
+/* blog page */
+
+#blog .blog-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#blog {
+    padding: 100px 20px 0 20px;
+}
+
+#blog .blog-img {
+    width: 100%;
+    margin-right: 0px;
+    margin-bottom: 30px;
+}
+
+#blog .blog-details {
+    width: 100%;
+}
+
+#page-header.blog-header p {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+#page-header.blog-header h2 {
+    font-size: 38px;
+}
 
 }
