--- a/style.css
+++ b/style.css
@@ -759,6 +759,48 @@ footer .copyright {
     color: #c9cbce;
 }
 
+/* about page  */
+
+#page-header.about-header {
+    background-image: url(img/about/banner.png);
+}
+
+#about-head {
+    display: flex;
+    align-items: center;
+}
+
+#about-head img {
+    width: 50%;
+    height: auto;
+}
+
+#about-head div {
+    padding-left: 40px;
+
+}
+
+#about-app {
+    text-align: center;
+}
+
+#about-app h1{
+    font-size: 48px;
+}
+
+#about-app .video {
+    width: 70%;
+    height: 100%;
+    margin: 30px auto 0 auto;
+}
+
+#about-app .video video {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;   
+}
+
+
 
 
 
