--- a/style.css
+++ b/style.css
@@ -802,7 +802,6 @@ footer .copyright {
 /* contact page  */
 
 
-
 #contact-details {
     display: flex;
     align-items: center;
@@ -811,6 +810,7 @@ footer .copyright {
 
 #contact-details .details {
     width: 40%;
+    flex-direction: column;
 }
 
 #contact-details .details span,
@@ -890,7 +890,6 @@ footer .copyright {
     padding-bottom: 25px;
     display: flex;
     align-items: flex-start;
-    
 }
 
 #form-details .people {
@@ -910,13 +909,16 @@ footer .copyright {
     line-height: 25px;
 }
 
+.back-drop-hide {
+    display: none;
+}
+
 #form-details .people div span {
     display: block;
     font-size: 16px;
     font-weight: 600;
     color: #000;
 }
-
 
 
 
@@ -1031,11 +1033,19 @@ footer .copyright {
 #newsletter .form {
     width: 70%;
 }
+
+/* contact page */
+
+#form-details {
+    padding: 40px;
 }
 
-.back-drop-hide {
-    display: none;
+#form-details form {
+    width: 50%;
 }
+
+}
+
 
 @media (max-width: 477px) {
     #section-p1  {
@@ -1188,6 +1198,32 @@ footer .copyright {
 
 #about-app h1{
     font-size: 30px;
+}
+
+/* contact page */
+ 
+#contact-details  {
+    flex-direction: column;
+}
+
+#contact-details .details {
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+#contact-details .map {
+    width: 100%;
+}
+
+#form-details {
+    margin: 10px;
+    padding:30px 10px;
+    flex-wrap: wrap;
+}
+
+#form-details form {
+    width: 100%;
+    margin-bottom: 30px;
 }
 
 }
