--- a/style.css
+++ b/style.css
@@ -922,6 +922,10 @@ footer .copyright {
 
 /* cart page */
 
+#cart {
+    overflow-x: auto;
+}
+
 #cart table {
     width: 100%;
     border-collapse: collapse;
@@ -1336,6 +1340,22 @@ footer .copyright {
 #form-details form {
     width: 100%;
     margin-bottom: 30px;
+}
+
+/* cart page */
+
+#cart-add {
+    flex-direction: column;
+}
+
+#coupon {
+    width: 100%;
+}
+
+#subtotal {
+    width: 100%;
+    padding:20px
+    ;
 }
 
 }
